Replace New Sketch's click event by pointer event and add mobile version of the grid

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="spaceDiv"></div>
 
-    <div id="mainContainer"></div>
+    <div class="mainContainer"></div>
         
     
     <script src="script.js"></script>
